corrected bootstrap and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ mark {
 }
 
 .lessons p {
-    margin-left: 45px;
+    margin-left: 40px;
     margin-right: 20px;
     font-size: 15px;
 }
